Swagger / Spec tests for Comments
